--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.1",
-	"appid": "wx84f1fb1e93f11984",
+	"appid": "wxf8d95f61a9af2b5b",
 	"projectname": "weui_dick",
 	"debugOptions": {
 		"hidedInDevtools": []
